--- a/style.css
+++ b/style.css
@@ -31,3 +31,9 @@ input.blank {
   text-align: center;
   margin: 0 5px;
 }
+
+select.blank {
+  margin: 0 4px;
+  padding: 4px;
+  font-size: 16px;
+}
